--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,6 +12,10 @@
     -ms-overflow-style: none; /* IE and Edge */
     scrollbar-width: none; /* Firefox */
   }
+  .no-tap-highlight {
+    -webkit-tap-highlight-color: transparent;
+  }
+
 }
 
 * {
